spade-tests/src/snapshots/spade_tests__hir_lowering__tests__using_unavailable_variable_causes_error.snap
---
source: spade-tests/src/hir_lowering.rs
---
pipeline(5) X(clk: clk) -> bool {reg*5; false}

pipeline(5) main(clk: clk, x: bool) -> bool {
        let x = inst(5) X(clk);
    reg;
        let res = x;
    reg*4;
        res
}


error: Use of x before it is ready
  ┌─ testinput:6:19
  │
6 │         let res = x;
  │                   ^ Is unavailable for another 4 stages
  │
  = Requesting x from stage 1
  = But it will not be available until stage 5


